// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletListItem should render 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fTgXGQ group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="space-x-4 TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR"
          >
            <div
              class="flex-shrink-0 -space-x-2"
            >
              <div
                aria-label="ARK Devnet"
                class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background dark:group-hover:ring-black dark:group-hover:bg-black group-hover:ring-theme-secondary-100 group-hover:bg-secondary-100"
                data-testid="NetworkIcon-ARK-ark.devnet"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 ksomUO ring-theme-background dark:group-hover:ring-black dark:group-hover:bg-black group-hover:ring-theme-secondary-100 group-hover:bg-secondary-100"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="text-base font-semibold text-theme-text"
                data-testid="Address__alias"
              >
                <span
                  class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                data-testid="Address__address"
              >
                D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="justify-center text-sm font-bold text-center align-middle TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <div
              class="inline-flex items-center space-x-1"
            >
              <div
                class="inline-block p-1 text-theme-text"
                data-testid="WalletIcon__Ledger"
              >
                <div
                  class="sc-bdfBwQ dHWxPT"
                  height="16"
                  width="1em"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-warning-400"
                data-testid="WalletIcon__Star"
              >
                <div
                  class="sc-bdfBwQ dHWxPT"
                  height="16"
                  width="1em"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="justify-end font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <span
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB text-theme-secondary-400"
          >
            <span
              data-testid="Amount"
            >
              0 BTC
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`WalletListItem should render for selected wallet 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fiawjh group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="space-x-4 TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR"
          >
            <div
              class="flex-shrink-0 -space-x-2"
            >
              <div
                aria-label="ARK Devnet"
                class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-success-900 dark:group-hover:ring-black dark:group-hover:bg-black group-hover:ring-theme-secondary-100 group-hover:bg-secondary-100"
                data-testid="NetworkIcon-ARK-ark.devnet"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 ksomUO ring-theme-success-900 dark:group-hover:ring-black dark:group-hover:bg-black group-hover:ring-theme-secondary-100 group-hover:bg-secondary-100"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="text-base font-semibold text-theme-text"
                data-testid="Address__alias"
              >
                <span
                  class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                data-testid="Address__address"
              >
                D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="justify-center text-sm font-bold text-center align-middle TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <div
              class="inline-flex items-center space-x-1"
            >
              <div
                class="inline-block p-1 text-theme-text"
                data-testid="WalletIcon__Ledger"
              >
                <div
                  class="sc-bdfBwQ dHWxPT"
                  height="16"
                  width="1em"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-warning-400"
                data-testid="WalletIcon__Star"
              >
                <div
                  class="sc-bdfBwQ dHWxPT"
                  height="16"
                  width="1em"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="justify-end font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <span
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB text-theme-secondary-400"
          >
            <span
              data-testid="Amount"
            >
              0 BTC
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`WalletListItem should render with default BTC as default exchangeCurrency 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fTgXGQ group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="space-x-4 TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR"
          >
            <div
              class="flex-shrink-0 -space-x-2"
            >
              <div
                aria-label="ARK Devnet"
                class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background dark:group-hover:ring-black dark:group-hover:bg-black group-hover:ring-theme-secondary-100 group-hover:bg-secondary-100"
                data-testid="NetworkIcon-ARK-ark.devnet"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 ksomUO ring-theme-background dark:group-hover:ring-black dark:group-hover:bg-black group-hover:ring-theme-secondary-100 group-hover:bg-secondary-100"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="text-base font-semibold text-theme-text"
                data-testid="Address__alias"
              >
                <span
                  class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                data-testid="Address__address"
              >
                D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="justify-center text-sm font-bold text-center align-middle TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <div
              class="inline-flex items-center space-x-1"
            >
              <div
                class="inline-block p-1 text-theme-text"
                data-testid="WalletIcon__Ledger"
              >
                <div
                  class="sc-bdfBwQ dHWxPT"
                  height="16"
                  width="1em"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-warning-400"
                data-testid="WalletIcon__Star"
              >
                <div
                  class="sc-bdfBwQ dHWxPT"
                  height="16"
                  width="1em"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="justify-end font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <span
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB text-theme-secondary-400"
          >
            <span
              data-testid="Amount"
            >
              0 BTC
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
